Removed inline style from timer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="game-container">
         <div id="content"></div>
         <div class="info-container hidden">
-            <div class="timer-section" style="margin-top: 200px;">
+            <div class="timer-section">
                 <div class="timer-title">Time:</div>
                 <div class="timer-value" id="timer-value">00:00</div>
             </div>
